 - obspy.seedlink:
   * Fix Python3 compatibility for seedlink.easyseedlink
   * Basic seedlink client: Properly timeout requests with valid station
     selection but no data available in selected time window (see #1045)
 - obspy.signal:
   * Fix return data types/values of polarization routines (see #1026)
 - obspy.station:
   * Fix URL to FDSN StationXML schema in StationXML output (see #1023)

0.10.1: (doi: 10.5281/zenodo.16248)
 - minor changes for correct distribution of official release
   tar/zipball (see #993, #994)
 - one minor encoding-related bugfix in mopad script (see #992)

0.10.0: (doi: 10.5281/zenodo.16200)
 - Highlights:
   * Python3 support
   * anaconda support
   * New formats: AH, CNV, Kinemetrics EVT, NDK, NLLOC, PDAS, ZMAP
   * ObsPy licensed under LGPL v3.0 now as a whole.
 - General:
   * Support for Python 3.3 and 3.4 in addition to 2.6 and 2.7
   * ObsPy licensed under LGPL v3.0 now as a whole.
   * More generic processing history for most Stream and Trace methods.
   * Now requires NumPy >= 1.4.0
   * Now requires SciPy >= 0.7.2
   * Tested compatibility with most major Linux distributions still
     receiving updates.
   * The next major obspy release (0.11) will drop support for:
     * Python < 2.7
     * matplotlib < 1.1
     * numpy < 1.6
     * scipy < 0.10
 - obspy.ah
   * New submodule for reading the AH (Ad Hoc) waveform format
 - obspy.arclink:
   * add support for Poles and Zeros type "B" (Analog, Hz), see #899
 - obspy.core:
   * Preview waveform plot improved: interactive updating of ticks and
     ticklabels, correct ticklabels for sub-minute zoom level (#657)
   * fixed a problem with UTCDateTime with timestamps of far future
     dates (larger than 2038, often seen in StationXML end dates,
     see #805)
   * Support for basic custom namespace tags in QuakeML I/O (see #454)
   * `interpolate()` method for Stream/Trace objects.
   * Dictionary values added to an AttribDict will now be converted to an
     AttribDict.