@@ -65,6 +65,7 @@
    * Fix return data types/values of polarization routines (see #1026)
  - obspy.station:
    * Fix URL to FDSN StationXML schema in StationXML output (see #1023)
+   * make `site` mandatory argument for `Station` initialization (see #1117)
 
 0.10.1: (doi: 10.5281/zenodo.16248)
  - minor changes for correct distribution of official release
